--- a/packages/desktop-app/src/app/components/contextual-menu/contextual-menu.component.scss
+++ b/packages/desktop-app/src/app/components/contextual-menu/contextual-menu.component.scss
@@ -1,3 +1,7 @@
 @import "../../../assets/scss/mixins/utility";
 @import "../../../assets/scss/mixins/palette";
 @import "../../../assets/scss/global";
+
+.not-displayed {
+  display: none;
+}
