--- a/packages/desktop-app/src/assets/scss/global.scss
+++ b/packages/desktop-app/src/assets/scss/global.scss
@@ -848,37 +848,10 @@ tr:hover img.provider-icon {
 }
 
 tr:hover .moon-hover-session {
-  position: relative;
-  padding-top: 0 !important;
-  padding-left: 14px !important;
-  margin-top: -1px;
-  right: 16px;
-  top: 3px;
-}
-
-tr:hover i.hover-azure ~ span {
-  position: relative;
-  top: -1px;
-}
-
-body:not(.dark-theme) td.table-column-1.selected .session-name-td span {
-  position: relative;
-  top: 1px;
-}
-
-body:not(.dark-theme) tr:hover td.table-column-1.selected .session-name-td span {
-  position: relative;
-  top: 0 !important;
-}
-
-body:not(.dark-theme) tr:hover td.table-column-1.selected .session-name-td .hover-azure ~ span {
-  position: relative;
-  top: -1px !important;
-}
-
-.compact tr:hover i.hover-azure ~ span {
-  position: relative;
-  top: 2px;
+  margin-left: 0;
+  font-size: 20.5px;
+  margin-right: 10px;
+  margin-top: 3px;
 }
 
 .blackery {
