chore: added button to open web console from contextual menu

--- a/packages/desktop-app/src/app/components/contextual-menu/contextual-menu.component.html
+++ b/packages/desktop-app/src/app/components/contextual-menu/contextual-menu.component.html
@@ -99,6 +99,13 @@
       </button>
     </ng-container>
 
+    <ng-container>
+      <button mat-menu-item (click)="sendExtensionMessage();">
+        <i class="moon-User"></i>&nbsp;
+        <span>open web console</span>
+      </button>
+    </ng-container>
+
   </mat-menu>
 
   <mat-menu #change>
