chore: changed browser extension action name

--- a/packages/desktop-app/src/app/components/contextual-menu/contextual-menu.component.html
+++ b/packages/desktop-app/src/app/components/contextual-menu/contextual-menu.component.html
@@ -102,7 +102,7 @@
     <ng-container>
       <button mat-menu-item (click)="sendExtensionMessage();">
         <i class="moon-User"></i>&nbsp;
-        <span>open web console</span>
+        <span>Open Web Console Extension</span>
       </button>
     </ng-container>
 
