--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
@@ -175,3 +175,21 @@
   display: inline-block;
   padding-bottom: 10px;
 }
+
+.extension-info {
+  position: relative;
+  bottom: 41px;
+  strong {
+    bottom: 5px;
+    position: relative;
+  }
+}
+
+.extension-documentation-button {
+  margin-left: 10px;
+}
+
+.install-firefox-button, .extension-documentation-button {
+  position: relative;
+  bottom: 10px;
+}
