--- a/packages/desktop-app/src/app/components/contextual-menu/contextual-menu.component.html
+++ b/packages/desktop-app/src/app/components/contextual-menu/contextual-menu.component.html
@@ -102,7 +102,7 @@
     <ng-container>
       <button [disabled]="openWebConsoleExtensionDisabled ? true : null" [class.disabled]="openWebConsoleExtensionDisabled" mat-menu-item (click)="sendExtensionMessage();">
         <i class="moon-User"></i>&nbsp;
-        <span>Open Web Console Extension</span>
+        <span>Open Multi-Console Extension</span>
       </button>
     </ng-container>
 
