--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
@@ -280,18 +280,18 @@
     <mat-tab>
       <ng-template mat-tab-label>
         <i class="mat-tab-icon moon-Open-Web-Console"></i>
-        <span class="mat-tab-label-text">Extension</span>
+        <span class="mat-tab-label-text">Multi-Console</span>
       </ng-template>
       <div class="no-padding no-margin panel">
-        <div class="hero-unit">
+        <div class="hero-unit hero-unit-extension">
           <img src="assets/images/in-browser.png" alt="">
           <p class="extension-info">
-            <strong>Leapp Browser Extension</strong>
-            <span>To install it on Firefox, visit the Extension Store. The extension will also be available very soon on Chrome and other browsers.</span>
+            <strong>Multi-Console Browser Extension</strong>
+            <span>Browse multiple AWS Web Consoles at once from your browser of choice using the Leapp Multi-Console Browser Extension. <strong>To install it on Firefox</strong>, visit the Mozilla Extension Store. <strong>To install it on Chrome and other Chromium-based browsers</strong>, read the docs.</span>
             <br>
             <span>
               <button type="button" class="install-firefox-button" (click)="openBrowser('https://addons.mozilla.org/en-GB/firefox/')">Get it on Firefox</button>
-              <button type="button" class="extension-documentation-button" (click)="openBrowser('https://docs.leapp.cloud')">Read Docs</button>
+              <button type="button" class="extension-documentation-button" (click)="openBrowser('https://docs.leapp.cloud')">Get it on Chrome</button>
             </span>
           </p>
         </div>
