--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
@@ -176,9 +176,13 @@
   padding-bottom: 10px;
 }
 
+.hero-unit-extension {
+  border: none;
+}
+
 .extension-info {
   position: relative;
-  bottom: 41px;
+  bottom: 51px;
   strong {
     bottom: 5px;
     position: relative;
@@ -192,4 +196,12 @@
 .install-firefox-button, .extension-documentation-button {
   position: relative;
   bottom: 10px;
+  font-size: 15px;
+}
+
+.extension-info span strong {
+  font-weight: bold;
+  display: inline;
+  font-size: 16px;
+  top: 0;
 }
