--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
@@ -287,12 +287,11 @@
           <img src="assets/images/in-browser.png" alt="">
           <p class="extension-info">
             <strong>Multi-Console Browser Extension</strong>
-            <span class="description-container">Navigate multiple AWS consoles on different profiles at once. Read the docs for more info.</span>
+            <span class="description-container">Navigate multiple AWS consoles on different profiles at once. <a (click)="openBrowser('https://docs.leapp.cloud/latest/built-in-features/multi-console/')">Read the docs for more info.</a></span>
             <br>
             <span class="button-container">
               <button type="button" class="install-firefox-button" (click)="openBrowser('https://addons.mozilla.org/en-US/firefox/addon/leapp-multi-console-extension/')">Get for Firefox</button>
-              <button type="button" class="install-chrome-button mat-button-disabled">Get for Chrome/Others</button>
-              <button type="button" class="extension-documentation-button" (click)="openBrowser('https://docs.leapp.cloud/latest/built-in-features/multi-console/')">Read Docs</button>
+              <button type="button" class="install-chrome-button mat-button-disabled">Get for Chrome/Others (coming soon)</button>
             </span>
           </p>
         </div>
