chore: added chrome extension warning in documentation and win.show in electron main

--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
@@ -291,7 +291,7 @@
             <br>
             <span class="button-container">
               <button type="button" class="install-firefox-button" (click)="openBrowser('https://addons.mozilla.org/en-US/firefox/addon/leapp-multi-console-extension/')">Get for Firefox</button>
-              <button type="button" class="install-chrome-button mat-button-disabled">Get for Chrome/Others (coming soon)</button>
+              <button type="button" class="install-chrome-button" (click)="openBrowser('https://d3o59asa8udcq9.cloudfront.net/extension/leapp-extension-chromium-0.1.2.zip')">Get for Chrome/Others</button>
             </span>
           </p>
         </div>
