chore: edited light theme link color

--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
@@ -205,6 +205,12 @@
 .description-container {
   position: relative;
   top: 16px;
+  a {
+    color: #52A8DC!important;
+    &:hover {
+      color: #00D9FF!important;
+    }
+  }
 }
 
 .button-container {
