--- a/packages/desktop-app/src/app/components/contextual-menu/contextual-menu.component.html
+++ b/packages/desktop-app/src/app/components/contextual-menu/contextual-menu.component.html
@@ -99,7 +99,8 @@
       </button>
     </ng-container>
 
-    <ng-container>
+    <ng-container
+      *ngIf="selectedSession.type === eSessionType.awsSsoRole || selectedSession.type === eSessionType.awsIamRoleFederated || selectedSession.type === eSessionType.awsIamRoleChained">
       <button [disabled]="openWebConsoleExtensionDisabled ? true : null" [class.disabled]="openWebConsoleExtensionDisabled" mat-menu-item (click)="sendExtensionMessage();">
         <i class="moon-User"></i>&nbsp;
         <span>Open Multi-Console Extension</span>
