--- a/packages/desktop-app/src/app/components/contextual-menu/contextual-menu.component.scss
+++ b/packages/desktop-app/src/app/components/contextual-menu/contextual-menu.component.scss
@@ -12,7 +12,7 @@ img.moon-stop-outline {
   margin-bottom: 2px;
 }
 
-.disabled i.moon-User,
+.disabled i.moon-Open-Web-Console,
 .disabled span {
   color: $silver-30;
 }
