--- a/packages/desktop-app/src/assets/scss/global.scss
+++ b/packages/desktop-app/src/assets/scss/global.scss
@@ -857,3 +857,16 @@ tr:hover .moon-hover-session {
 .blackery {
   color: $text-color;
 }
+
+.enable-option {
+  .mat-slide-toggle-label {
+    gap: 10px;
+    left: -148px!important;
+    position: relative;
+  }
+
+  .mat-slide-toggle-content {
+    font-weight: bold;
+    font-size: 17px !important;
+  }
+}
