--- a/packages/desktop-app/src/assets/scss/dark-theme.scss
+++ b/packages/desktop-app/src/assets/scss/dark-theme.scss
@@ -513,4 +513,8 @@ body.dark-theme {
   i.fa-apple, i.fa-windows, i.fa-linux {
     color: #52A8DC!important;
   }
+
+  .enable-option {
+    border-color: #404040!important;
+  }
 }
