chore: fixed active icon color in dark mode

--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
@@ -315,7 +315,7 @@
           <img src="assets/images/in-browser.png" alt="">
           <p class="extension-info">
             <strong>Multi-Console Browser Extension</strong>
-            <span class="description-container">Navigate multiple AWS consoles on different profiles at once. <a (click)="openBrowser('https://docs.leapp.cloud/latest/built-in-features/multi-console/#install-the-extension')">Read the docs for more info.</a></span>
+            <span class="description-container">Navigate multiple AWS consoles on different tabs at once. <a (click)="openBrowser('https://docs.leapp.cloud/latest/built-in-features/multi-console/#install-the-extension')">Read the docs for more info.</a></span>
             <br>
             <span class="button-container">
               <button type="button" class="install-firefox-button" (click)="openBrowser('https://addons.mozilla.org/en-US/firefox/addon/leapp-multi-console-extension/')">Get for Firefox</button>
